# binance_streamer

./: Cargo.toml  README.md  dashboard.py  dashboard_v2.py  montecarlo.py  project.toml  requirements.txt  research.py  simulator.py
data/: realtime_tick.mmap
src/: common.rs  executor.rs  lib.rs  mdfeed.rs  orderbook.rs  router.rs  signal_engine.rs  storage.rs  strategy_manager.rs  types.rs
src/indicators/: bollinger.rs  ema.rs  mod.rs  rsi.rs  sma.rs
src/strategies/: mean_reversion.rs  mod.rs  momentum.rs  trend_follower.rs
