[package]
name = "binance_streamer"
version = "0.1.0"
edition = "2021"

[lib]
name = "binance_streamer"
crate-type = ["cdylib"]

[dependencies]
# Async runtime and WebSockets
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = { version = "0.23.0", features = ["native-tls"] }
futures-util = "0.3.30"
url = "2.5.0"

# Data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
rust_decimal = { version = "1.35.0", features = ["serde"] }

# Python bridge
pyo3 = { version = "0.21.2", features = ["extension-module"] }

# Warm Path (Storage)
csv = "1.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
memmap2 = "0.9.4"

# Hot Path (Realtime Lane)
ringbuf = "0.4.0"
hdrhistogram = "7.5.4"